# INF273

./: README.md  assignment1.md
1/: assignment1_final.md
truck_and_drone/: .gitignore  CMakeLists.txt  README.md
truck_and_drone/build_release/: test_truck_and_drone
truck_and_drone/data/contest/: contest.txt  contest_new.txt
truck_and_drone/data/toy_example/: toy_example.txt
truck_and_drone/docs/: README.md  TODOS.md  assignment3_notes.md  assignment5.md  assignment_2a.md  check_vals.txt  cmakedocs.txt  current_gam_setup.md  current_mix_operators.md  current_solution_fixers.md  data_handler.py  exam.md  faster_drones.md  faster_feasibility_and_objective.txt  final_ops.md  fix_concorde.sh  fixers_idea.md  general_notes.md  python_objective_func_reference.py  solution_representation.md  swap_and_pop.md  tomorrow.md
truck_and_drone/experiments_meeting1/: README.md
truck_and_drone/experiments_meeting1/best_found_iters/: f100runs.csv  f10runs.csv  f20runs.csv  f50runs.csv  r100runs.csv  r10runs.csv  r20runs.csv  r50runs.csv
truck_and_drone/include/algorithms/: blind_random_search.h  gam.h  gam_escape_algorithm.h  gam_final_ver.h  gam_solution_cache.h  gamstructs.h  greedy_drone_cover.h  helpers.h  local_search.h  nearest_neighbour.h  random_escape.h  random_valid_solution.h  simple_initial_solution.h  simulated_annealing.h
truck_and_drone/include/datahandling/: convert_submission.h  convert_to_submission.h  create_markdown_tables.h  datasets.h  file_helpers.h  instance.h  instance_preprocessing.h  reader.h  save_to_csv.h
truck_and_drone/include/general/: get_customer_positions.h  get_not_covered_by_truck.h  get_truck_arrival_times.h  random.h  roulette_wheel_selection.h  sort_drone_collection.h  split.h
truck_and_drone/include/operators/: candidate_evaluation.h  customer_slot_helpers.h  drone_planner.h  drone_rendezvous_shift.h  exact_segment_reopt.h  exchange_k.h  greedy_truck_swap.h  helpers.h  interval_helpers.h  late_customer_drone_promotion.h  nearest_neighbour_reassign.h  one_reinsert.h  operator.h  or_opt_segment_relocate.h  origin_destination_relocation.h  replace_drone_delivery.h  replace_truck_delivery.h  route_timing.h  shaw_removal_greedy_repair.h  solution_fixers.h  substitute_truck_delivery.h  three_opt.h  two_opt.h
truck_and_drone/include/operators/alns/: alns_composite.h  first_improvement_insert.h  greedy_insert.h  random_removal.h  signatures.h  worst_removal.h
truck_and_drone/include/runners/: algorithms.h  all_blind_random.h  run_algorithm.h  wrappers.h
truck_and_drone/include/solution_fixers/: solution_fixers.h
truck_and_drone/include/tsp/: concorde_linkern_c_api.h  linkernsolver.h
truck_and_drone/include/verification/: feasibility_check.h  objective_value.h  solution.h
truck_and_drone/scripts/: plot_run_statistics.py
truck_and_drone/src/: main.cpp
truck_and_drone/src/algorithms/: all_blind_random.cpp  blind_random_search.cpp  gam.cpp  gam_alns.cpp  gam_escape_algorithm.cpp  gam_solution_cache.cpp  greedy_drone_cover.cpp  helpers.cpp  local_search.cpp  nearest_neighbour.cpp  random_valid_solution.cpp  simple_initial_solution.cpp  simulated_annealing.cpp
truck_and_drone/src/datahandling/: convert_to_submission.cpp  create_markdown_tables.cpp  file_helpers.cpp  instance_preprocessing.cpp  reader.cpp  save_to_csv.cpp
truck_and_drone/src/general/: get_customer_positions.cpp  get_not_covered_by_truck.cpp  get_truck_arrival_times.cpp  random.cpp  roulette_wheel_selection.cpp  sort_drone_collection.cpp  split.cpp
truck_and_drone/src/operators/: candidate_evaluation.cpp  concorde_k_swap_rebuild.cpp  concorde_tsp.cpp  customer_slot_helpers.cpp  drone_planner.cpp  drone_rendezvous_shift.cpp  exact_segment_reopt.cpp  exchange_k_v2.cpp  helpers.cpp  interval_helpers.cpp  late_customer_drone_promotion.cpp  nearest_neighbour_reassign.cpp  one_reinsert.cpp  operator.cpp  or_opt_segment_relocate.cpp  origin_destination_relocation.cpp  replace_drone_delivery.cpp  replace_truck_delivery.cpp  route_timing.cpp  shaw_removal_greedy_repair.cpp  solution_fixers.cpp  substitute_truck_delivery.cpp  three_opt.cpp  truck_relocate_1.cpp  two_opt.cpp
truck_and_drone/src/operators/alns/: alns_composite.cpp  greedy_insert.cpp  random_removal.cpp
truck_and_drone/src/runners/: all_blind_random.cpp  run_algorithm.cpp  wrappers.cpp
truck_and_drone/src/solution_fixers/: drone_planner_fixers.cpp  helper_methods.cpp  internal.h  launch_land_assignment.cpp  simple_feasibility_fixers.cpp  two_opt_fixers.cpp
truck_and_drone/src/tests/: test_main.cpp
truck_and_drone/src/tsp/: concorde_linkern_c_api.c  linkernsolver.cpp
truck_and_drone/src/verification/: feasibility_check.cpp  objective_value.cpp  solution_utils.cpp  solution_visualization.cpp
